<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background_day" />

            <ImageView
                android:id="@+id/backWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:src="@color/white"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/backBlack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:src="@color/black"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20sp">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="150sp"
                        android:layout_height="150sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40sp"
                        android:src="@drawable/logo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo"
                        android:layout_marginVertical="20sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome_to"
                            android:textColor="?colorError"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" " />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="?colorError"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/skipBtn"
                        android:layout_marginBottom="10sp"
                        android:background="@drawable/button6"
                        android:backgroundTint="?trackColor"
                        android:text="@string/login"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/skipBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/button"
                        android:text="@string/register"
                        android:textColor="?colorError" />

                </RelativeLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</layout>